removed duplicate views file

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,1 +1,4 @@
-<h1>Hello, Traffic Spyer</h1>
+<form action="/sources" method="post">  
+  <input type="text" name="message">  
+  <input type="submit">  
+</form>
