starting some web output

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,4 +1,13 @@
-<form action="/sources" method="post">  
+<html>
+  <head>
+    <title>Payload Input</title>
+  </head>
+  <body>
+    <form action="/sources" method="post">  
+      <p>
+        Input payload
   <input type="text" name="message">  
   <input type="submit">  
-</form>
+    </form>
+  </body>
+</html>
