--- a/lib/views/sources.erb
+++ b/lib/views/sources.erb
@@ -5,94 +5,176 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Foundation 4</title>
+  <title>le TrafficSpy</title>
 
-  <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/foundation.css" />
+  <link rel="stylesheet" href="/css/normalize.css" />
+  <link rel="stylesheet" href="/css/foundation.css" />
+  <link rel="stylesheet" href="/css/font-awesome.css" />
+  <link href='http://fonts.googleapis.com/css?family=Quattrocento:700' rel='stylesheet' type='text/css'>
   
 
   <script src="js/vendor/custom.modernizr.js"></script>
 
 </head>
 <body>
+  <nav class="top-bar">
+    <ul class="title-area">
+      <!-- Title Area -->
+      <li class="name">
+        <h1><a href="#">le TrafficSpy</a></h1>
+      </li>
+      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+      <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+    </ul>
 
-  <div class="row">
-    <div class="large-12 columns">
-      <h2>Welcome to Foundation</h2>
-      <p>This is version 4.0.2.</p>
-      <hr />
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="large-8 columns">
-      <h3>The Grid</h3>
-
-      <!-- Grid Example -->
-      <div class="row">
-        <div class="large-12 columns">
-          <div class="panel">
-            <p>This is a twelve column section in a row. Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="large-6 columns">
-          <div class="panel">
-            <p>Six columns</p>
-          </div>
-        </div>
-        <div class="large-6 columns">
-          <div class="panel">
-            <p>Six columns</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="large-4 columns">
-          <div class="panel">
-            <p>Four columns</p>
-          </div>
-        </div>
-        <div class="large-4 columns">
-          <div class="panel">
-            <p>Four columns</p>
-          </div>
-        </div>
-        <div class="large-4 columns">
-          <div class="panel">
-            <p>Four columns</p>
-          </div>
-        </div>
-      </div>
-
-      <h3>Buttons</h3>
-
-      <div class="row">
-        <div class="large-6 columns">
-          <p><a href="#" class="small button">Small Button</a></p>
-          <p><a href="#" class="button">Medium Button</a></p>
-          <p><a href="#" class="large button">Large Button</a></p>
-        </div>
-        <div class="large-6 columns">
-          <p><a href="#" class="small alert button">Small Alert Button</a></p>
-          <p><a href="#" class="success button">Medium Success Button</a></p>
-          <p><a href="#" class="large secondary button">Large Secondary Button</a></p>
-        </div>
-      </div>
-    </div>
-
-    <div class="large-4 columns">
-      <h4>Getting Starte`d</h4>
-      <p>We're stoked you want to try Foundation! To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-
-      <h4>Other Resources</h4>
-      <p>Once you've exhausted the fun in this document, you should check out:</p>
-      <ul class="disc">
-        <li><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</li>
-        <li><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</li>
-        <li><a href="http://twitter.com/foundationzurb">@foundationzurb</a><br />Ping us on Twitter if you have questions. If you build something with this we'd love to see it (and send you a totally boss sticker).</li>
+    <section class="top-bar-section">
+      <!-- Right Nav Section -->
+      <ul class="right">
+        <li class="divider show-for-small"></li>
+        <li class="has-form">
+          <a class="button" href="#"><i class="icon-user"></i>Log In</a>
+        </li>
       </ul>
+    </section>
+  </nav>
+
+  <div id="main" class="row">
+    <div id="sub-nav" class="large-2 columns">
+      <ul class="sub-nav">
+        <li><a href="#" class="active"><i class="icon-dashboard"></i>Dashboard</a></li>
+        <li><a href="#"><i class="icon-copy"></i>Pages</a></li>
+        <li><a href="#"><i class="icon-time"></i>Response Times</a></li>
+        <li><a href="#"><i class="icon-money"></i>Campaigns</a></li>
+        <li><a href="#"><i class="icon-group"></i>Events</a></li>
+        <li><a href="#"><i class="icon-cogs"></i>Operating Systems</a></li>
+        <li><a href="#"><i class="icon-laptop"></i>Screen Resolutions</a></li>
+      </ul>
+    </div>
+
+    <div id="content" class="large-10 columns">
+      <div id="content-inner">
+        <%= @identifier %>
+        <div class="widget">
+          <h3>Pages</h3>
+          <table cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
+            <!-- Table Header -->
+            <thead>
+              <tr>
+                <th>URL</th>
+                <th>Requests</th>
+              </tr>
+            </thead>
+            <!-- Table Header -->
+
+            <!-- Table Body -->
+            <tbody>
+
+              <tr>
+                <td><a href="#">http://jumpstartlab.com/ohyeah</a></td>
+                <td>100</td>
+              </tr><!-- Table Row -->
+
+              <tr class="even">
+                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
+                <td>100</td>
+              </tr><!-- Darker Table Row -->
+
+              <tr>
+                <td><a href="#">http://jumpstartlab.com/frankthetank</a></td>
+                <td>90</td>
+              </tr>
+
+              <tr class="even">
+                <td><a href="#">http://jumpstartlab.com/railzzz</a></td>
+                <td>80</td>
+              </tr>
+
+              <tr>
+                <td><a href="#">http://jumpstartlab.com/tutorialzz</a></td>
+                <td>80</td>
+              </tr>
+
+              <tr class="even">
+                <td><a href="#">http://jumpstartlab.com/washingtondc4lyfe</a></td>
+                <td>60</td>
+              </tr>
+
+              <tr>
+                <td><a href="#">http://jumpstartlab.com/boom</a></td>
+                <td>40</td>
+              </tr>
+
+              <tr class="even">
+                <td><a href="#">http://jumpstartlab.com/roobeee</a></td>
+                <td>20</td>
+              </tr>
+
+            </tbody>
+            <!-- Table Body -->
+
+          </table>
+        </div>
+        <div class="widget">
+          <h3>Response Times</h3>
+          <table cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
+            <!-- Table Header -->
+            <thead>
+              <tr>
+                <th>URL</th>
+                <th>Average</th>
+              </tr>
+            </thead>
+            <!-- Table Header -->
+
+            <!-- Table Body -->
+            <tbody>
+
+              <tr>
+                <td><a href="#">http://jumpstartlab.com/ohyeah</a></td>
+                <td>500ms</td>
+              </tr><!-- Table Row -->
+
+              <tr class="even">
+                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
+                <td>450ms</td>
+              </tr><!-- Darker Table Row -->
+
+              <tr>
+                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
+                <td>300ms</td>
+              </tr>
+
+              <tr class="even">
+                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
+                <td>200ms</td>
+              </tr>
+
+              <tr>
+                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
+                <td>200ms</td>
+              </tr>
+
+              <tr class="even">
+                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
+                <td>100ms</td>
+              </tr>
+
+              <tr>
+                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
+                <td>75ms</td>
+              </tr>
+
+              <tr class="even">
+                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
+                <td>70ms</td>
+              </tr>
+
+            </tbody>
+            <!-- Table Body -->
+
+          </table>
+        </div>
+      </div>
     </div>
   </div>
 
