--- a/lib/views/sources.erb
+++ b/lib/views/sources.erb
@@ -67,11 +67,12 @@
 
             <!-- Table Body -->
             <tbody>
-
+              <% @sorted_urls.each do |url, count| %>
               <tr>
-                <td><a href="#">http://jumpstartlab.com/ohyeah</a></td>
-                <td>100</td>
+                <td><a href="#"><%= url %></a></td>
+                <td><%= count %></td>
               </tr><!-- Table Row -->
+              <% end %>
 
               <tr class="even">
                 <td><a href="#">http://jumpstartlab.com/whoa</a></td>
