--- a/lib/views/sources.erb
+++ b/lib/views/sources.erb
@@ -46,6 +46,7 @@
         <li><a href="#"><i class="icon-time"></i>Response Times</a></li>
         <li><a href="#"><i class="icon-money"></i>Campaigns</a></li>
         <li><a href="#"><i class="icon-group"></i>Events</a></li>
+        <li><a href="#"><i class="icon-cogs"></i>Browsers</a></li>
         <li><a href="#"><i class="icon-cogs"></i>Operating Systems</a></li>
         <li><a href="#"><i class="icon-laptop"></i>Screen Resolutions</a></li>
       </ul>
@@ -78,61 +79,54 @@
 
           </table>
         </div>
+
         <div class="widget">
-          <h3>Response Times</h3>
+          <h3>Browsers</h3>
           <table cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
             <!-- Table Header -->
             <thead>
               <tr>
-                <th>URL</th>
-                <th>Average</th>
+                <th>Browser</th>
+                <th>Count</th>
               </tr>
             </thead>
             <!-- Table Header -->
 
             <!-- Table Body -->
             <tbody>
-
+              <% @browser_breakdown.each do |browser, count| %>
               <tr>
-                <td><a href="#">http://jumpstartlab.com/ohyeah</a></td>
-                <td>500ms</td>
+               <!--  <td><a href="#">http://jumpstartlab.com/ohyeah</a></td> -->
+                <td><%= browser %></td>
+                <td><%= count %></td>
               </tr><!-- Table Row -->
+              <% end %>
+            </tbody>
+            <!-- Table Body -->
 
-              <tr class="even">
-                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
-                <td>450ms</td>
-              </tr><!-- Darker Table Row -->
+          </table>
 
+          <div class="widget">
+          <h3>Operating Systems</h3>
+          <table cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
+            <!-- Table Header -->
+            <thead>
               <tr>
-                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
-                <td>300ms</td>
+                <th>OS</th>
+                <th>Count</th>
               </tr>
+            </thead>
+            <!-- Table Header -->
 
-              <tr class="even">
-                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
-                <td>200ms</td>
-              </tr>
-
+            <!-- Table Body -->
+            <tbody>
+              <% @os_breakdown.each do |os, count| %>
               <tr>
-                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
-                <td>200ms</td>
-              </tr>
-
-              <tr class="even">
-                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
-                <td>100ms</td>
-              </tr>
-
-              <tr>
-                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
-                <td>75ms</td>
-              </tr>
-
-              <tr class="even">
-                <td><a href="#">http://jumpstartlab.com/whoa</a></td>
-                <td>70ms</td>
-              </tr>
-
+               <!--  <td><a href="#">http://jumpstartlab.com/ohyeah</a></td> -->
+                <td><%= os %></td>
+                <td><%= count %></td>
+              </tr><!-- Table Row -->
+              <% end %>
             </tbody>
             <!-- Table Body -->
 
