--- a/lib/views/sources.erb
+++ b/lib/views/sources.erb
@@ -133,6 +133,32 @@
 
           </table>
         </div>
+          <div class="widget">
+          <h3>Screen Resolutions</h3>
+          <table cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
+            <!-- Table Header -->
+            <thead>
+              <tr>
+                <th>Screen Resolution</th>
+                <th>Count</th>
+              </tr>
+            </thead>
+            <!-- Table Header -->
+
+            <!-- Table Body -->
+            <tbody>
+              <% @resolution_breakdown.each do |resolution, count| %>
+              <tr>
+               <!--  <td><a href="#">http://jumpstartlab.com/ohyeah</a></td> -->
+                <td><%= resolution %></td>
+                <td><%= count %></td>
+              </tr><!-- Table Row -->
+              <% end %>
+            </tbody>
+            <!-- Table Body -->
+
+          </table>
+        </div>
       </div>
     </div>
   </div>
