--- a/lib/views/sources.erb
+++ b/lib/views/sources.erb
@@ -45,7 +45,7 @@
         <li><a href="#"><i class="icon-copy"></i>Pages</a></li>
         <li><a href="#"><i class="icon-time"></i>Response Times</a></li>
         <li><a href="#"><i class="icon-money"></i>Campaigns</a></li>
-        <li><a href="#"><i class="icon-group"></i>Events</a></li>
+        <li><a href="/sources/<%= @identifier %>/events"><i class="icon-group"></i>Events</a></li>
         <li><a href="#"><i class="icon-cogs"></i>Browsers</a></li>
         <li><a href="#"><i class="icon-cogs"></i>Operating Systems</a></li>
         <li><a href="#"><i class="icon-laptop"></i>Screen Resolutions</a></li>
