--- a/lib/views/event_name_error.erb
+++ b/lib/views/event_name_error.erb
@@ -5,7 +5,7 @@
   <body>
     <h1>Whoopsididdles! - An Error Occurred</h1>
     <p>
-      No events match the name of your parameter.  Please click <a href="/sources/<%= @identifier %>/events">here</a> to view all available events.
+      No events match the name of your query.  Please click <a href="/sources/<%= @identifier %>/events">here</a> to view all events.
     <p>
   </body>
 </html>
