--- a/lib/views/urls.erb
+++ b/lib/views/urls.erb
@@ -41,13 +41,13 @@
   <div id="main" class="row">
     <div id="sub-nav" class="large-2 columns">
       <ul class="sub-nav">
-        <li><a href="#" class="active"><i class="icon-dashboard"></i>Dashboard</a></li>
-        <li><a href="#"><i class="icon-copy"></i>Pages</a></li>
-        <li><a href="#"><i class="icon-time"></i>Response Times</a></li>
-        <li><a href="#"><i class="icon-money"></i>Campaigns</a></li>
-        <li><a href="#"><i class="icon-group"></i>Events</a></li>
-        <li><a href="#"><i class="icon-cogs"></i>Operating Systems</a></li>
-        <li><a href="#"><i class="icon-laptop"></i>Screen Resolutions</a></li>
+        <li><a href="/sources/<%= @identifier %>"><i class="icon-dashboard"></i>Dashboard</a></li>
+        <li><a href="#" class="active"><i class="icon-copy"></i>Pages</a></li>
+        <li><a href="/sources/<%= @identifier %>"><i class="icon-time"></i>Response Times</a></li>
+        <li><a href="/sources/<%= @identifier %>/campaigns"><i class="icon-money"></i>Campaigns</a></li>
+        <li><a href="/sources/<%= @identifier %>/events"><i class="icon-group"></i>Events</a></li>
+        <li><a href="/sources/<%= @identifier %>"><i class="icon-cogs"></i>Operating Systems</a></li>
+        <li><a href="/sources/<%= @identifier %>"><i class="icon-laptop"></i>Screen Resolutions</a></li>
       </ul>
     </div>
 
