payload event missing

--- a/lib/views/sources.erb
+++ b/lib/views/sources.erb
@@ -61,7 +61,7 @@
     <div id="content" class="large-10 columns">
       <div id="content-inner">
         <div class="row">
-          <div class="widget">
+          <div class="full-table">
             <h3>Pages</h3>
             <table cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
               <!-- Table Header -->
@@ -86,7 +86,9 @@
 
             </table>
           </div>
+        </div>
 
+        <div class="row">
           <div class="widget">
             <h3>Browsers</h3>
             <table cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
@@ -113,9 +115,7 @@
 
             </table>
           </div>
-        </div>
 
-        <div class="row">
           <div class="widget">
             <h3>Operating Systems</h3>
             <table cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
@@ -142,6 +142,8 @@
 
             </table>
           </div>
+        </div>
+        <div class="row">
           <div class="widget">
             <h3>Screen Resolutions</h3>
             <table cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
@@ -168,8 +170,7 @@
 
             </table>
           </div>
-        </div>
-        <div class="row">
+
           <div class="widget">
             <h3>Response Times</h3>
             <table cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
@@ -196,7 +197,6 @@
 
             </table>
           </div>
-          
         </div>
       </div>
     </div>
