--- a/lib/views/event.erb
+++ b/lib/views/event.erb
@@ -44,7 +44,7 @@
         <li><a href="/sources/<%= @identifier %>"><i class="icon-dashboard"></i>Dashboard</a></li>
         <li><a href="/sources/<%= @identifier %>"><i class="icon-copy"></i>Pages</a></li>
         <li><a href="/sources/<%= @identifier %>"><i class="icon-time"></i>Response Times</a></li>
-        <li><a href="#"><i class="icon-money"></i>Campaigns</a></li>
+        <li><a href="/sources/<%= @identifier %>/campaigns"><i class="icon-money"></i>Campaigns</a></li>
         <li><a href="#" class ="active"><i class="icon-group"></i>Events</a></li>
         <li><a href="/sources/<%= @identifier %>"><i class="icon-cogs"></i>Browsers</a></li>
         <li><a href="/sources/<%= @identifier %>"><i class="icon-cogs"></i>Operating Systems</a></li>
