--- a/lib/views/event_details.erb
+++ b/lib/views/event_details.erb
@@ -45,7 +45,7 @@
         <li><a href="/sources/<%= @identifier %>"><i class="icon-copy"></i>Pages</a></li>
         <li><a href="/sources/<%= @identifier %>"><i class="icon-time"></i>Response Times</a></li>
         <li><a href="/sources/<%= @identifier %>/campaigns"><i class="icon-money"></i>Campaigns</a></li>
-        <li><a href="/sources/<%= @identifier %>/events>" class="active"><i class="icon-group"></i>Events</a></li>
+        <li><a href="/sources/<%= @identifier %>/events" class="active"><i class="icon-group"></i>Events</a></li>
         <li><a href="/sources/<%= @identifier %>"><i class="icon-cogs"></i>Operating Systems</a></li>
         <li><a href="/sources/<%= @identifier %>"><i class="icon-laptop"></i>Screen Resolutions</a></li>
       </ul>
