--- a/lib/views/sources.erb
+++ b/lib/views/sources.erb
@@ -189,7 +189,7 @@
                 <tr>
                  <!--  <td><a href="#">http://jumpstartlab.com/ohyeah</a></td> -->
                   <td><%= page %></td>
-                  <td><%= response %></td>
+                  <td><%= response %>ms</td>
                 </tr><!-- Table Row -->
                 <% end %>
               </tbody>
