--- a/lib/views/error.erb
+++ b/lib/views/error.erb
@@ -4,8 +4,9 @@
   </head>
   <body>
     <h1>Womp Womp - An Error Occurred</h1>
+    <img src="http://farm3.staticflickr.com/2494/3960967793_b8018a1c6d_b.jpg">
     <p>
       Please try again.
-    <p>
+    </p>
   </body>
 </html>
