--- a/lib/views/event_name_error.erb
+++ b/lib/views/event_name_error.erb
@@ -4,8 +4,9 @@
   </head>
   <body>
     <h1>Whoopsididdles! - An Error Occurred</h1>
+    <img src="http://farm3.staticflickr.com/2494/3960967793_b8018a1c6d_b.jpg">
     <p>
       No events match the name of your query.  Please click <a href="/sources/<%= @identifier %>/events">here</a> to view all events.
-    <p>
+    </p>
   </body>
 </html>
